<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main_Page" >

    <TextView
        android:id="@+id/seekLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/wordsLable"
        android:layout_below="@+id/inputText"
        android:layout_marginTop="23dp"
        android:text="How many letters of word you are searching for ?"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wordsLable"
        android:layout_alignRight="@+id/seekbarLabel"
        android:layout_below="@+id/wordsLable"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorHint="#ffffff" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="@string/SearchWord"
        android:text="@string/FindButton"
        android:textSize="20dp"
        android:background="#fcbebe" />

    <TextView
        android:id="@+id/seekbarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/wordsLable"
        android:layout_alignTop="@+id/seekBar"
        android:layout_marginRight="16dp"
        android:text="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ef0000"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/wordsLable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Entre random letters below to search the word"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textSize="17dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekLabel"
        android:layout_toLeftOf="@+id/seekbarLabel"
        android:max="@integer/max" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Find"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:text="Recommend"
                android:onClick="@string/recommend"
                android:id="@+id/button" />

            <Button
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:onClick="@string/onBtnClick"
                android:layout_width="0dip"
                android:text="Saved Words"
                android:id="@+id/button2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:text="Help"
                android:onClick="@string/helpBtn"
                android:id="@+id/button3" />

            <Button
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:text="Clear"
                android:onClick="@string/clearBtn"
                android:id="@+id/button5" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>